--- a/towndeli/tracking1.html
+++ b/towndeli/tracking1.html
@@ -446,41 +446,87 @@
                             <div class="tracking-header">
                                 <div class="order-name">
                                     Đơn đặt hàng 1: Cold-brewed coffee
-                                </dev>
+                                </div>
+                                <div class="btn-control">
+                                    <ul >
+                                        <li>
+                                            <a href="#" class="pre"><span></span></a>
+                                        </li>
+                                        <li>
+                                            <a href="#" class="next"><span></span></a>
+                                        </li>
+                                    </ul>
+                                </div>
                             </div>
                             <div class="general-info">
-                                <ul>
-                                    <li>
-                                        <div class="order-id wrapper">
-                                            <h5 class="pdt-10"><strong>Mã đơn hàng:</strong></h5>
-                                            <h6>1234567890</h6>
-                                        </div>
-                                    </li>
-                                    <li>
-                                        <div class="order-id wrapper">
-                                            <h5 class="pdt-10"><strong>Thời gian đặt:</strong></h5>
-                                            <h6>22:00, Thứ 3 13/12/2016</h6>
-                                        </div>
-                                    </li>
-                                    <li>
-                                        <div class="order-id wrapper">
-                                            <h5 class="pdt-10"><strong>Tổng tiền:</strong></h5>
-                                            <h6>80.000 đ</h6>
-                                        </div>
-                                    </li>
-                                    <li>
-                                        <div class="order-id wrapper">
-                                            <h5 class="pdt-10"><strong>Tình trạng đơn hàng:</strong></h5>
-                                            <h6>Waiting</h6>
-                                        </div>
-                                    </li>
-                                </ul>
+                                <div class="col-md-3 border-right mgt-15">
+                                    <div class="wrapper">
+                                        <div><strong>Mã đơn hàng:</strong></div>
+                                        <div>1234567890</div>
+                                    </div>
+                                </div>
+                                <div class="col-md-3 border-right mgt-15">
+                                    <div class="wrapper">
+                                        <div><strong>Thời gian đặt:</strong></div>
+                                        <div>22:00, Thứ 3 13/12/2016</div>
+                                    </div>
+                                </div>
+                                <div class="col-md-3 border-right mgt-15">
+                                    <div class="wrapper">
+                                        <div><strong>Tổng tiền:</strong></div>
+                                        <div>80.000 đ</div>
+                                    </div>
+                                </div>
+                                <div class="col-md-3 mgt-15">
+                                    <div class="wrapper">
+                                        <div><strong>Tình trạng đơn hàng:</strong></div>
+                                        <div>Waiting</div>
+                                    </div>
+                                </div>
                             </div>
                             <div class="orders-flow">
-                                
+                                <div class="top">
+                                    <div class="content">
+                                        <div class="left">
+                                            <span>Cold-brewed coffee x 1</span>
+                                            <span>- Cold-brewed coffee x 1</span>
+                                            <span>- Cold-brewed coffee x 1</span>
+                                            <span>- Cold-brewed coffee x 1</span>
+                                        </div>
+                                        <div class="right"></div>
+                                    </div>
+                                </div>
+                                <div class="mid">
+                                    <div class="main-line">
+                                        <div class="step1-wrapper">
+                                            <a href="#">
+                                                <span class="icon"></span>
+                                            </a>
+                                            <span class="title">Đơn hàng đang xử lý</span>
+                                        </div>
+
+                                        <div class="step2-wrapper">
+                                            <a href="#">
+                                                <span class="icon"></span>
+                                            </a>
+                                            <span class="title">Đã pha chế</span>
+                                        </div>
+
+                                        <div class="step3-wrapper">
+                                            <a href="#">
+                                                <span class="icon"></span>
+                                            </a>
+                                            <span class="title">Giao vào lúc --:--</span>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="bottom">
+                                    Đơn hàng của bạn đang được xử lý <br>
+                                    Chúng tôi sẽ gởi tin nhắn cho bạn theo dõi đơn hàng ngay khi đơn hàng xử lý xong
+                                </div>
                             </div>
                             <div class="col-md-12 orders-detail">
-                                <h4 class="title"><strong>Chi tiết đơn hàng</strong></h4>
+                                <h5 class="title"><strong>Chi tiết đơn hàng</strong></h5>
                                 <div class="table-responsive">
                                     <table class="table orders-list-table">
                                         <thead>
@@ -495,14 +541,20 @@
                                         <tbody>
                                             <tr>
                                                 <td>1</td>
-                                                <td>Cool-brewed coffee - Standard</td>
+                                                <td class="name">
+                                                    <span class="drink-name">Cool-brewed coffee - Standard</span>
+                                                    <span class="notes">Món thêm: Cookies, Strawbery, phô mai</span>
+                                                </td>
                                                 <td>Ít ngọt, ít đá</td>
                                                 <td>1</td>
                                                 <td>20.000 đ</td>
                                             </tr>
                                             <tr>
-                                                <td>1</td>
-                                                <td>Cool-brewed coffee - Standard</td>
+                                                <td>2</td>
+                                                <td class="name">
+                                                    <span class="drink-name">Cool-brewed coffee - Standard</span>
+                                                    <span class="notes">Món thêm: Cookies, Strawbery, phô mai</span>
+                                                </td>
                                                 <td>Ít ngọt, ít đá</td>
                                                 <td>1</td>
                                                 <td>20.000 đ</td>
@@ -511,18 +563,16 @@
                                     </table>
                                     <div class="orders-table-footer">
                                         <div class="col-md-8 notes">
-                                            <h5 class="note-title">
-                                                <strong>Ghi chú đơn hàng</strong>
-                                            </h5>
+                                            <div class="note-title">Ghi chú đơn hàng</div>
                                             <div class="note-content">
                                                 Giao hàng trước 12h, gặp lệ tân và nói giao hàng cho chị Loan phòng maketing
                                             </div>
                                         </div>
                                         <div class="col-md-4 total">
                                             <div>Tính tạm: 80.000 đ</div>
-                                            <div class="mgt-12">Voucher: -10.000 đ</div>
-                                            <div class="mgt-12">Điểm tích lũy: -20.000 đ</div>
-                                            <div class="mgt-12"><strong>TỔNG TIỀN: 80.000 đ</strong></div>
+                                            <div>Voucher: -10.000 đ</div>
+                                            <div>Điểm tích lũy: -20.000 đ</div>
+                                            <div><strong>TỔNG TIỀN: 80.000 đ</strong></div>
                                         </div>
                                     </div>
                                 </div>
@@ -533,7 +583,7 @@
                 </div>
             </div>
         </div>
-        <!-- /.wrap-profile -->
+        <!-- /.wrap-tracking -->
     </div>
 </div>
 <!-- /.main -->
