--- a/towndeli/tracking1.html
+++ b/towndeli/tracking1.html
@@ -493,7 +493,11 @@
                                             <span>- Cold-brewed coffee x 1</span>
                                             <span>- Cold-brewed coffee x 1</span>
                                         </div>
-                                        <div class="right"></div>
+                                        <div class="right">
+                                            <a href="" class="up"><span></span></a>
+                                            <span class="paging">1/5</span>
+                                            <a href="" class="down"><span></span></a>
+                                        </div>
                                     </div>
                                 </div>
                                 <div class="mid">
