--- a/towndeli/tracking1.html
+++ b/towndeli/tracking1.html
@@ -445,7 +445,7 @@
                         <div class="row">
                             <div class="tracking-header">
                                 <div class="order-name">
-                                    Đơn đặt hàng 1: Cold-brewed coffee
+                                    <span>Đơn đặt hàng 1: Cold-brewed coffee</span>
                                 </div>
                                 <div class="btn-control">
                                     <ul >
@@ -458,29 +458,30 @@
                                     </ul>
                                 </div>
                             </div>
-                            <div class="general-info">
-                                <div class="col-md-3 border-right mgt-15">
+                            <div class="general-info row">
+                                <div class="col-xs-12 col-sm-3 border-right mgt-15">
                                     <div class="wrapper">
                                         <div><strong>Mã đơn hàng:</strong></div>
                                         <div>1234567890</div>
                                     </div>
                                 </div>
-                                <div class="col-md-3 border-right mgt-15">
+                                <div class="col-xs-12 col-sm-3 border-right mgt-15">
                                     <div class="wrapper">
                                         <div><strong>Thời gian đặt:</strong></div>
                                         <div>22:00, Thứ 3 13/12/2016</div>
                                     </div>
                                 </div>
-                                <div class="col-md-3 border-right mgt-15">
+                                <div class="col-xs-12 col-sm-3 border-right mgt-15">
                                     <div class="wrapper">
                                         <div><strong>Tổng tiền:</strong></div>
                                         <div>80.000 đ</div>
                                     </div>
                                 </div>
-                                <div class="col-md-3 mgt-15">
-                                    <div class="wrapper">
+                                <div class="col-xs-12 col-sm-3 mgt-15 mgb-15">
+                                    <div class="wrapper waiting">
                                         <div><strong>Tình trạng đơn hàng:</strong></div>
-                                        <div>Waiting</div>
+                                        <i class="icon"></i>
+                                        <span class="status">Waiting</span>
                                     </div>
                                 </div>
                             </div>
@@ -500,28 +501,31 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="mid">
-                                    <div class="main-line">
-                                        <div class="step1-wrapper">
-                                            <a href="#">
-                                                <span class="icon"></span>
-                                            </a>
-                                            <span class="title">Đơn hàng đang xử lý</span>
-                                        </div>
-
-                                        <div class="step2-wrapper">
-                                            <a href="#">
-                                                <span class="icon"></span>
-                                            </a>
-                                            <span class="title">Đã pha chế</span>
-                                        </div>
-
-                                        <div class="step3-wrapper">
-                                            <a href="#">
-                                                <span class="icon"></span>
-                                            </a>
-                                            <span class="title">Giao vào lúc --:--</span>
-                                        </div>
+                                <div class="mid">                                 
+                                    <div class="step-menu">
+                                        <div class="line"></div>
+                                        <ul>
+                                            <li class="step1 active">
+                                                <div class="circle">
+                                                    <i></i>
+                                                </div>
+                                                <h4>Đơn hàng đang xử lý</h4>
+                                            </li>
+                                            <li class="step2">
+                                                <div class="circle">
+                                                    <i></i>
+                                                </div>
+                                                <h4>Đã pha chế</h4>
+                                            </li>
+                                            <li class="step3">
+                                                <div class="wrapper">
+                                                    <div class="circle">
+                                                    <i></i>
+                                                </div>
+                                                <h4>Giao vào lúc --:--</h4>
+                                            </div>
+                                            </li>
+                                        </ul>
                                     </div>
                                 </div>
                                 <div class="bottom">
@@ -565,19 +569,19 @@
                                             </tr>
                                         </tbody>
                                     </table>
-                                    <div class="orders-table-footer">
-                                        <div class="col-md-8 notes">
-                                            <div class="note-title">Ghi chú đơn hàng</div>
-                                            <div class="note-content">
-                                                Giao hàng trước 12h, gặp lệ tân và nói giao hàng cho chị Loan phòng maketing
-                                            </div>
+                                </div>
+                                <div class="orders-table-footer">
+                                    <div class="col-xs-6 col-sm-8 notes">
+                                        <div class="note-title">Ghi chú đơn hàng</div>
+                                        <div class="note-content">
+                                            Giao hàng trước 12h, gặp lệ tân và nói giao hàng cho chị Loan phòng maketing
                                         </div>
-                                        <div class="col-md-4 total">
-                                            <div>Tính tạm: 80.000 đ</div>
-                                            <div>Voucher: -10.000 đ</div>
-                                            <div>Điểm tích lũy: -20.000 đ</div>
-                                            <div><strong>TỔNG TIỀN: 80.000 đ</strong></div>
-                                        </div>
+                                    </div>
+                                    <div class="col-xs-6 col-sm-4 total">
+                                        <div>Tính tạm: 80.000 đ</div>
+                                        <div>Voucher: -10.000 đ</div>
+                                        <div>Điểm tích lũy: -20.000 đ</div>
+                                        <div><strong>TỔNG TIỀN: 80.000 đ</strong></div>
                                     </div>
                                 </div>
                             </div>
