--- a/towndeli/tracking2.html
+++ b/towndeli/tracking2.html
@@ -478,31 +478,27 @@
                                     </div>
                                 </div>
                                 <div class="col-xs-12 col-sm-3 mgt-15 mgb-15">
-                                    <div class="wrapper waiting">
+                                    <div class="wrapper made">
                                         <div><strong>Tình trạng đơn hàng:</strong></div>
                                         <i class="icon"></i>
-                                        <span class="status">Waiting</span>
+                                        <span class="status">Đang chế biến</span>
                                     </div>
                                 </div>
                             </div>
                             <div class="orders-flow">
                                 <div class="top">
-                                    <div class="content content-step-1">
-                                        <div class="left">
-                                            <span>Cold-brewed coffee x 1</span>
-                                            <span>- Cold-brewed coffee x 1</span>
-                                            <span>- Cold-brewed coffee x 1</span>
-                                            <span>- Cold-brewed coffee x 1</span>
-                                        </div>
-                                        <div class="right">
-                                            <a href="" class="up"><span></span></a>
-                                            <span class="paging">1/5</span>
-                                            <a href="" class="down"><span></span></a>
-                                        </div>
+                                    <div class="content content-step-2">
+                                        <i class="home-icon"></i>
+                                        <span class="address"><strong>CN Town Deli Q1</strong></span>
+                                        <span>2A, Nguyễn Thị Minh Khai, P. Đakao, Q.1</span>
+                                        <span>Sẽ giao hàng cho bạn khi thức uống được pha chế xong</span>
                                     </div>
                                 </div>
                                 <div class="mid">                                 
                                     <div class="step-menu">
+                                        <div class="line-step2">
+                                            <i class="circle"></i>
+                                        </div>
                                         <div class="full-line"></div>
                                         <ul>
                                             <li class="step1 active">
