--- a/towndeli/tracking1.html
+++ b/towndeli/tracking1.html
@@ -502,30 +502,34 @@
                                     </div>
                                 </div>
                                 <div class="mid">                                 
-                                    <div class="step-menu">
-                                        <div class="full-line"></div>
-                                        <ul>
-                                            <li class="step1 active">
-                                                <div class="circle">
-                                                    <i></i>
+                                    <div class="progress-wrapper">
+                                        <div class="progress progress-tracking-1">
+                                            <div class="one">
+                                                <div class="circle active">
+                                                    <i class="icon"></i>
                                                 </div>
-                                                <h4>Đơn hàng đang xử lý</h4>
-                                            </li>
-                                            <li class="step2">
-                                                <div class="circle">
-                                                    <i></i>
+                                                <div class="title">
+                                                    <span><strong>Đơn hàng đang xử lý</strong></span>
                                                 </div>
-                                                <h4>Đã pha chế</h4>
-                                            </li>
-                                            <li class="step3">
-                                                <div class="wrapper">
-                                                    <div class="circle">
-                                                    <i></i>
-                                                </div>
-                                                <h4>Giao vào lúc --:--</h4>
                                             </div>
-                                            </li>
-                                        </ul>
+                                            <div class="two">
+                                                <div class="circle">
+                                                    <i class="icon"></i>
+                                                </div>
+                                                <div class="title">
+                                                    <span>Đã pha chế</span>
+                                                </div>
+                                            </div>
+                                            <div class="three">
+                                                <div class="circle">
+                                                    <i class="icon"></i>
+                                                </div>
+                                                <div class="title titile-step-3">
+                                                    <span><strong>Giao vào lúc: --:--</strong></span>
+                                                </div>
+                                            </div>
+                                            <div class="progress-bar progress-bar-1"></div>
+                                        </div>
                                     </div>
                                 </div>
                                 <div class="bottom">
