--- a/towndeli/tracking2.html
+++ b/towndeli/tracking2.html
@@ -485,7 +485,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="orders-flow">
+                            <div class="orders-flow orders-flow-tracking-2">
                                 <div class="top">
                                     <div class="content content-step-2">
                                         <i class="home-icon"></i>
@@ -495,38 +495,44 @@
                                     </div>
                                 </div>
                                 <div class="mid">                                 
-                                    <div class="step-menu">
-                                        <div class="line-step2">
-                                            <i class="circle"></i>
-                                        </div>
-                                        <div class="full-line"></div>
-                                        <ul>
-                                            <li class="step1 active">
-                                                <div class="circle">
-                                                    <i></i>
+                                    <div class="progress-wrapper">
+                                        <div class="progress progress-tracking-2">
+                                            <div class="one">
+                                                <div class="circle active">
+                                                    <i class="icon"></i>
                                                 </div>
-                                                <h4>Đơn hàng đang xử lý</h4>
-                                            </li>
-                                            <li class="step2">
-                                                <div class="circle">
-                                                    <i></i>
+                                                <div class="title">
+                                                    <span>22:10</span>
+                                                    <span><strong>Đã duyệt</strong></span>
                                                 </div>
-                                                <h4>Đã pha chế</h4>
-                                            </li>
-                                            <li class="step3">
-                                                <div class="wrapper">
-                                                    <div class="circle">
-                                                    <i></i>
-                                                </div>
-                                                <h4>Giao vào lúc --:--</h4>
                                             </div>
-                                            </li>
-                                        </ul>
+                                            <div class="two">
+                                                <div class="circle">
+                                                    <i class="icon"></i>
+                                                </div>
+                                                <div class="title">
+                                                    <span>22:30</span>
+                                                    <span><strong>Đã pha chế</strong></span>
+                                                </div>
+                                            </div>
+                                            <div class="three">
+                                                <div class="circle">
+                                                    <i class="icon"></i>
+                                                </div>
+                                                <div class="title titile-step-3">
+                                                    <span>Giao vào lúc: <strong>23:30</strong></span>
+                                                    <span>Giao đến: 153 Hai Bà Trưng, P.Đakao, Q.1</span>
+                                                    <span>Người nhận: Nguyễn Thị Linh</span>
+                                                    <span>SĐT: 0964123321</span>
+                                                </div>
+                                            </div>
+                                            <div class="progress-bar progress-bar-2">
+                                                <div class="node-wrapper">
+                                                    <i class="node"></i>
+                                                </div>
+                                            </div>
+                                        </div>
                                     </div>
-                                </div>
-                                <div class="bottom">
-                                    Đơn hàng của bạn đang được xử lý <br>
-                                    Chúng tôi sẽ gởi tin nhắn cho bạn theo dõi đơn hàng ngay khi đơn hàng xử lý xong
                                 </div>
                             </div>
                             <div class="col-md-12 orders-detail">
