--- a/towndeli/tracking4.html
+++ b/towndeli/tracking4.html
@@ -478,33 +478,28 @@
                                     </div>
                                 </div>
                                 <div class="col-xs-12 col-sm-3 mgt-15 mgb-15">
-                                    <div class="wrapper shipping">
+                                    <div class="wrapper completed">
                                         <div><strong>Tình trạng đơn hàng:</strong></div>
                                         <i class="icon"></i>
-                                        <span class="status">Đang giao hàng</span>
+                                        <span class="status">Hoàn tất</span>
                                     </div>
                                 </div>
                             </div>
-                            <div class="orders-flow orders-flow-tracking-3">
+                            <div class="orders-flow orders-flow-tracking-4">
                                 <div class="top">
-                                    <div class="content content-step-3">
-                                        <div class="shiper-avatar">
-                                            <a><img src="dist/images/avatar.png" alt="img"></a>
+                                    <div class="content content-step-4">
+                                        <div class="coffe-cup">
+                                            <a><img src="dist/images/coffe-cup.png" alt="img"></a>
                                         </div>
-                                        <div class="shiper-info">
-                                            <span class="address"><strong>VỊ TRÍ & TÊN NGƯỜI GIAO HÀNG</strong></span>
-                                            <i class="profile-icon"></i>
-                                            <span class="name"> Nguyễn Văn A</span>
-                                            <i class="phone-icon"></i>
-                                            <span class="phone">0964123321</span>
-                                            <i class="location-icon"></i>
-                                            <span class="location">Hai Bà Trưng, P.Đakao, Q.1, cách điểm đến 8km</span>
+                                        <div class="ship-info">
+                                            <span>Nguyễn Văn A đã thành công giao thức uống đến Nguyễn Thị Linh vào lúc 23:30</span>
+                                            <a href="">Hãy review để giúp Town Deli tốt hơn</a>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="mid">                                 
                                     <div class="progress-wrapper">
-                                        <div class="progress progress-tracking-3">
+                                        <div class="progress progress-tracking-4">
                                             <div class="one">
                                                 <div class="circle active">
                                                     <i class="icon"></i>
@@ -524,7 +519,7 @@
                                                 </div>
                                             </div>
                                             <div class="three">
-                                                <div class="circle">
+                                                <div class="circle active">
                                                     <i class="icon"></i>
                                                 </div>
                                                 <div class="title titile-step-3">
@@ -534,10 +529,8 @@
                                                     <span>SĐT: 0964123321</span>
                                                 </div>
                                             </div>
-                                            <div class="progress-bar progress-bar-3">
-                                                <div class="node-wrapper">
-                                                    <i class="node"></i>
-                                                </div>
+                                            <div class="progress-bar progress-bar-4">
+                                                <div class="node-wrapper"></div>
                                             </div>
                                         </div>
                                     </div>
