--- a/towndeli/tracking4.html
+++ b/towndeli/tracking4.html
@@ -118,55 +118,55 @@
 </div>
 
 <div class="modal fade review-modal" tabindex="-1">
-    <div class="modal-dialog modal-sm">
+    <div class="modal-dialog modal-md">
         <div class="modal-content">
             <div class="modal-body">
                 <div class="row mgb-5">
-                    <div class="col-xs-6">
+                    <div class="col-xs-4">
                         <span class="title">Xử lý đơn hàng:</span>
                     </div>
-                    <div class="col-xs-6 star-wrapper">
-                        <i class="star star1"></i>
-                        <i class="star star2"></i>
-                        <i class="star star3"></i>
-                        <i class="star star4"></i>
-                        <i class="star star5"></i>
+                    <div class="col-xs-8 star-wrapper">
+                        <i class="star star1 star-yellow"></i>
+                        <i class="star star2 star-yellow"></i>
+                        <i class="star star3 star-yellow"></i>
+                        <i class="star star4 star-yellow"></i>
+                        <i class="star star5 star-gray"></i>
                     </div>
                 </div>
                 <div class="row mgb-5">
-                    <div class="col-xs-6">
+                    <div class="col-xs-4">
                         <span class="title">Thời gian giao hàng:</span>
                     </div>
-                    <div class="col-xs-6 star-wrapper">
-                        <i class="star star1"></i>
-                        <i class="star star2"></i>
-                        <i class="star star3"></i>
-                        <i class="star star4"></i>
-                        <i class="star star5"></i>
+                    <div class="col-xs-8 star-wrapper">
+                        <i class="star star1 star-gray"></i>
+                        <i class="star star2 star-gray"></i>
+                        <i class="star star3 star-gray"></i>
+                        <i class="star star4 star-gray"></i>
+                        <i class="star star5 star-gray"></i>
                     </div>
                 </div>
                 <div class="row mgb-5">
-                    <div class="col-xs-6">
+                    <div class="col-xs-4">
                         <span class="title">Phong cách giao hàng:</span>
                     </div>
-                    <div class="col-xs-6 star-wrapper">
-                        <i class="star star1"></i>
-                        <i class="star star2"></i>
-                        <i class="star star3"></i>
-                        <i class="star star4"></i>
-                        <i class="star star5"></i>
+                    <div class="col-xs-8 star-wrapper">
+                        <i class="star star1 star-gray"></i>
+                        <i class="star star2 star-gray"></i>
+                        <i class="star star3 star-gray"></i>
+                        <i class="star star4 star-gray"></i>
+                        <i class="star star5 star-gray"></i>
                     </div>
                 </div>
                 <div class="row mgb-15">
-                    <div class="col-xs-6">
+                    <div class="col-xs-4">
                         <span class="title">Chất lượng món nước:</span>
                     </div>
-                    <div class="col-xs-6 star-wrapper">
-                        <i class="star star1"></i>
-                        <i class="star star2"></i>
-                        <i class="star star3"></i>
-                        <i class="star star4"></i>
-                        <i class="star star5"></i>
+                    <div class="col-xs-8 star-wrapper">
+                        <i class="star star1 star-gray"></i>
+                        <i class="star star2 star-gray"></i>
+                        <i class="star star3 star-gray"></i>
+                        <i class="star star4 star-gray"></i>
+                        <i class="star star5 star-gray"></i>
                     </div>
                 </div>
                 <div class="row">
