Orders history + schedule

--- a/towndeli/order-history.html
+++ b/towndeli/order-history.html
@@ -571,9 +571,11 @@
                                                 <span class="time">23:30</span>
                                                 <span class="date">13/12/2016</span>
                                             </td>
-                                            <td>
+                                            <td class="td-name">
                                                 <span class="code1">Mã:123456 <i></i></span>
-                                                <a>Cold-brewed coffee</a>
+                                                <a>
+                                                    <span class="name">Cold-brewed coffee <i class="edit-icon" data-toggle="modal" data-target=".edit-order-name-modal"></i>
+                                                </a>
                                             </td>
                                             <td>
                                                 <span class="star">4 <i></i></span>
@@ -589,32 +591,6 @@
                                                 <a class="reviewed" data-toggle="modal" data-target=".review-order-modal"></a>
                                                 <a class="btn2"></a>
                                                 <a class="btn3" data-toggle="modal" data-target=".send-order-email-modal"></a>
-                                                <a class="btn4" data-toggle="modal" data-target=".edit-order-name-modal"></a>
-                                            </td>
-                                        </tr>
-                                        <tr>
-                                            <td>
-                                                <span class="time">23:30</span>
-                                                <span class="date">13/12/2016</span>
-                                            </td>
-                                            <td>
-                                                <span class="code2">Mã:123456 <i></i></span>
-                                                <a>Cold-brewed coffee</a>
-                                            </td>
-                                            <td>
-                                                <span class="star">4 <i></i></span>
-                                            </td>
-                                            <td>Đã giao</td>
-                                            <td>
-                                                <span class="time">23:30</span>
-                                                <span class="date">13/12/2016</span>
-                                            </td>
-                                            <td>2 ly</td>
-                                            <td>16.000đ</td>
-                                            <td class="btn-control">
-                                                <a class="no-review"></a>
-                                                <a class="btn2"></a>
-                                                <a class="btn3"></a>
                                                 <a class="btn4"></a>
                                             </td>
                                         </tr>
@@ -623,9 +599,11 @@
                                                 <span class="time">23:30</span>
                                                 <span class="date">13/12/2016</span>
                                             </td>
-                                            <td>
+                                            <td class="td-name">
                                                 <span class="code1">Mã:123456 <i></i></span>
-                                                <a>Cold-brewed coffee</a>
+                                                <a>
+                                                    <span class="name">Cold-brewed coffee <i class="edit-icon" data-toggle="modal" data-target=".edit-order-name-modal"></i>
+                                                </a>
                                             </td>
                                             <td>
                                                 <span class="star">4 <i></i></span>
@@ -638,9 +616,9 @@
                                             <td>2 ly</td>
                                             <td>16.000đ</td>
                                             <td class="btn-control">
-                                                <a class="no-review"></a>
+                                                <a class="reviewed" data-toggle="modal" data-target=".review-order-modal"></a>
                                                 <a class="btn2"></a>
-                                                <a class="btn3"></a>
+                                                <a class="btn3" data-toggle="modal" data-target=".send-order-email-modal"></a>
                                                 <a class="btn4"></a>
                                             </td>
                                         </tr>
@@ -649,9 +627,11 @@
                                                 <span class="time">23:30</span>
                                                 <span class="date">13/12/2016</span>
                                             </td>
-                                            <td>
+                                            <td class="td-name">
                                                 <span class="code1">Mã:123456 <i></i></span>
-                                                <a>Cold-brewed coffee</a>
+                                                <a>
+                                                    <span class="name">Cold-brewed coffee <i class="edit-icon" data-toggle="modal" data-target=".edit-order-name-modal"></i>
+                                                </a>
                                             </td>
                                             <td>
                                                 <span class="star">4 <i></i></span>
@@ -664,9 +644,37 @@
                                             <td>2 ly</td>
                                             <td>16.000đ</td>
                                             <td class="btn-control">
-                                                <a class="no-review"></a>
+                                                <a class="reviewed" data-toggle="modal" data-target=".review-order-modal"></a>
                                                 <a class="btn2"></a>
-                                                <a class="btn3"></a>
+                                                <a class="btn3" data-toggle="modal" data-target=".send-order-email-modal"></a>
+                                                <a class="btn4"></a>
+                                            </td>
+                                        </tr>
+                                        <tr>
+                                            <td>
+                                                <span class="time">23:30</span>
+                                                <span class="date">13/12/2016</span>
+                                            </td>
+                                            <td class="td-name">
+                                                <span class="code1">Mã:123456 <i></i></span>
+                                                <a>
+                                                    <span class="name">Cold-brewed coffee <i class="edit-icon" data-toggle="modal" data-target=".edit-order-name-modal"></i>
+                                                </a>
+                                            </td>
+                                            <td>
+                                                <span class="star">4 <i></i></span>
+                                            </td>
+                                            <td>Đã giao</td>
+                                            <td>
+                                                <span class="time">23:30</span>
+                                                <span class="date">13/12/2016</span>
+                                            </td>
+                                            <td>2 ly</td>
+                                            <td>16.000đ</td>
+                                            <td class="btn-control">
+                                                <a class="reviewed" data-toggle="modal" data-target=".review-order-modal"></a>
+                                                <a class="btn2"></a>
+                                                <a class="btn3" data-toggle="modal" data-target=".send-order-email-modal"></a>
                                                 <a class="btn4"></a>
                                             </td>
                                         </tr>
