--- a/towndeli/schedule.html
+++ b/towndeli/schedule.html
@@ -117,6 +117,101 @@
     </div>
 </div>
 
+<div class="modal fade edit-schedule-modal" tabindex="-1">
+    <div class="modal-dialog modal-md">
+        <div class="modal-content">
+            <div class="modal-body">
+                <div class="row mgb-15">
+                    <h4 class="title">1.PICK A COFEE</h4>
+                </div>
+                <div class="row mgb-15">
+                    <div class="col-md-3">
+                        <label class="cus-lable">COFEE</label>
+                        <select id="coffee-select" class="custom-select" style="width:100%">
+                            <option value="1">COFFEE 1</option>
+                            <option value="2">COFFEE 2</option>
+                            <option value="3">COFFEE 3</option>
+                            <option value="4">COFFEE 4</option>
+                        </select>
+                    </div>
+                    <div class="col-md-3">
+                        <label class="cus-lable">SIZE</label>
+                        <select id="coffee-select" class="custom-select" style="width:100%">
+                            <option value="1">SIZE 1</option>
+                            <option value="2">SIZE 2</option>
+                            <option value="3">SIZE 3</option>
+                            <option value="4">SIZE 4</option>
+                        </select>
+                    </div>
+                    <div class="col-md-3">
+                        <label class="cus-lable">TOPPING</label>
+                        <select id="coffee-select" class="custom-select" style="width:100%">
+                            <option value="1">TOPPING 1</option>
+                            <option value="2">TOPPING 2</option>
+                            <option value="3">TOPPING 3</option>
+                            <option value="4">TOPPING 4</option>
+                        </select>
+                    </div>
+                    <div class="col-md-3">
+                        <label class="cus-lable">QUANTITY</label>
+                        <select id="coffee-select" class="custom-select" style="width:100%">
+                            <option value="1">1</option>
+                            <option value="2">2</option>
+                            <option value="3">3</option>
+                            <option value="4">4</option>
+                        </select>
+                    </div>
+                </div>
+                <div class="row mgb-15">
+                    <h4 class="title">1.DELIVERY DATES</h4>
+                </div>
+                <div class="row mgb-15">
+                    <div class="col-md-6">
+                        <label class="cus-lable">DATE</label>
+                        <select id="coffee-select" class="custom-select" style="width:100%">
+                            <option value="1">Các ngày trong tuần</option>
+                            <option value="2">Orther options</option>
+                            <option value="3">Orther options</option>
+                        </select>
+                    </div>
+                    <div class="col-md-6">
+                        <label class="cus-lable">TIME</label>
+                        <select id="coffee-select" class="custom-select" style="width:100%">
+                            <option value="08:30:00">08:30:00</option>
+                            <option value="09:00:00">09:00:00</option>
+                            <option value="09:30:00">09:30:00</option>
+                            <option value="10:00:00">10:00:00</option>
+                            <option value="10:30:00">10:30:00</option>
+                        </select>
+                    </div>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-update">Cập nhật</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="modal fade remove-schedule-modal" tabindex="-1">
+    <div class="modal-dialog modal-sm">
+        <div class="modal-content">
+            <div class="modal-body">
+                <div class="remove-icon">
+                    <img src="dist/images/big-remove-icon.png" alt=""/>
+                </div>
+                <div class="text">
+                    <span><strong>Lịch đặt món này đã thanh toán trong 1 tháng.</strong></span>
+                    <span>Nếu bạn chắc chắn muốn hủy, Town Deli sẽ chuyển khoản số tiền còn lại tính từ ngày <span class="date">19/12/2016</span> cho bạn</span>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-remove">Cập nhật</button>
+            </div>
+        </div>
+    </div>
+</div>
+
 <div class="topbar">
     <div class="container">
         <h4><strong>boost up your monday ! 50% off</strong> for espresso every monday from 09:00-12:00. <a>see more</a>
@@ -463,9 +558,7 @@
                                     </thead>
                                     <tbody>
                                         <tr>
-                                            <td>
-                                                1
-                                            </td>
+                                            <td>1</td>
                                             <td>
                                                 <span>Cafe Sữa</span>
                                                 <span><strong>Tooping:</strong> Phô mai, khúc bạch, trân châu</span>
@@ -480,8 +573,68 @@
                                             <td>2 ly</td>
                                             <td><span>8:30 Mỗi ngày</span></td>
                                             <td class="btn-control">
-                                                <a href="" class="edit"></a>
-                                                <a href="" class="remove"></a>
+                                                <a href="" class="edit" data-toggle="modal" data-target=".edit-schedule-modal"></a>
+                                                <a href="" class="remove" data-toggle="modal" data-target=".remove-schedule-modal"></a>
+                                            </td>
+                                        </tr>
+                                        <tr>
+                                            <td>2</td>
+                                            <td>
+                                                <span>Cafe Sữa</span>
+                                                <span><strong>Tooping:</strong> Phô mai, khúc bạch, trân châu</span>
+                                            </td>
+                                            <td>
+                                                <span class="time">23:30</span>
+                                                <span class="date">13/12/2016</span>
+                                            </td>
+                                            <td>
+                                                <span class="time">Vưa</span>
+                                            </td>
+                                            <td>2 ly</td>
+                                            <td><span>8:30 Mỗi ngày</span></td>
+                                            <td class="btn-control">
+                                                <a href="" class="edit" data-toggle="modal" data-target=".edit-schedule-modal"></a>
+                                                <a href="" class="remove" data-toggle="modal" data-target=".remove-schedule-modal"></a>
+                                            </td>
+                                        </tr>
+                                        <tr>
+                                            <td>3</td>
+                                            <td>
+                                                <span>Cafe Sữa</span>
+                                                <span><strong>Tooping:</strong> Phô mai, khúc bạch, trân châu</span>
+                                            </td>
+                                            <td>
+                                                <span class="time">23:30</span>
+                                                <span class="date">13/12/2016</span>
+                                            </td>
+                                            <td>
+                                                <span class="time">Vưa</span>
+                                            </td>
+                                            <td>2 ly</td>
+                                            <td><span>8:30 Mỗi ngày</span></td>
+                                            <td class="btn-control">
+                                                <a href="" class="edit" data-toggle="modal" data-target=".edit-schedule-modal"></a>
+                                                <a href="" class="remove" data-toggle="modal" data-target=".remove-schedule-modal"></a>
+                                            </td>
+                                        </tr>
+                                        <tr>
+                                            <td>4</td>
+                                            <td>
+                                                <span>Cafe Sữa</span>
+                                                <span><strong>Tooping:</strong> Phô mai, khúc bạch, trân châu</span>
+                                            </td>
+                                            <td>
+                                                <span class="time">23:30</span>
+                                                <span class="date">13/12/2016</span>
+                                            </td>
+                                            <td>
+                                                <span class="time">Vưa</span>
+                                            </td>
+                                            <td>2 ly</td>
+                                            <td><span>8:30 Mỗi ngày</span></td>
+                                            <td class="btn-control">
+                                                <a href="" class="edit" data-toggle="modal" data-target=".edit-schedule-modal"></a>
+                                                <a href="" class="remove" data-toggle="modal" data-target=".remove-schedule-modal"></a>
                                             </td>
                                         </tr>
                                     </tbody>
