--- a/towndeli/checkout.html
+++ b/towndeli/checkout.html
@@ -564,8 +564,8 @@
                                 <label for="payment-methods-select">DELIVERY TO</label>
                             </div>
                             <div class="right-form">
-                                <select id="payment-methods-select" class="custom-select no-search">
-                                    <option value="">Select payment method</option>
+                                <select id="payment-methods-select" class="custom-select no-search" style="width:100%">
+                                    <option value="">Select location</option>
                                     <option value="1">Method 1</option>
                                     <option value="2">Method 2</option>
                                     <option value="3">Method 3</option>
@@ -586,13 +586,16 @@
                 </div>
                 <div class="clearfix mgb-20 mgt-15">
                     <div class="pull-left">
-                        <img class="close-icon" src="dist/images/close-2-icon.png" alt="img" />09:00 AM. 01/01, 05/01, 06/01, 07/01, 12/01, 20/01, 21/01
+                        09:00 AM. 01/01, 05/01, 06/01, 07/01, 12/01, 20/01, 21/01
+                        <div class="payment-one-month-checkbox mgt-15">
+                            <input type="checkbox" id="payment-one-month-checkbox" class="css-checkbox" />
+                            <label for="payment-one-month-checkbox" class="css-label">Tôi muốn thanh toán 1 lần cho tháng này</label>
+                        </div>
                     </div>
                     <div class="pull-right">
                         <a class="edit-icon"><i class="fa fa-pencil-square-o"></i></a>
                     </div>
                 </div>
-                <div class="text-right"><button class="next-btn">NEXT</button></div>
             </div>
             <hr />
             <div class="payment-methods">
